--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,66 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width,initial-scale=1" name="viewport">
+  <meta content="description" name="description">
+  <meta name="google" content="notranslate" />
+  <meta content="Mashup templates have been developped by Orson.io team" name="author">
+
+  <!-- Disable tap highlight on IE -->
+  <meta name="msapplication-tap-highlight" content="no">
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
+  <link href="./assets/favicon.ico" rel="icon">
+
+  <title>Title page</title>  
+
+<link href="./index.css" rel="stylesheet"></head>
+
+<body ><!-- main banner -->
+<center>
+    <section class="inde" id="home">
+        <div class="container-fluid">
+            <div class="row">
+            <div style="margin-top:15rem ; background-color:aliceblue; border-radius:15px;">
+                <h2 class="hero_title">Hi,  I am Nevin Sunny </h2><br>
+                <p class="hero_desc">I create interactive websites that are unique, visually appealing and contain engaging content <br>written specifically for web audiences. Web creation is more than just coding. I work with the 'bigger picture'<br> in mind, that includes a concerted focus on performance, aesthetics, user experience and interaction, social media engagement and web presence optimization.  </p>
+            </div>
+	    
+            </div>
+	    <br>
+	    <br>
+	    <br>
+	    <br>
+        </div>
+	<br>
+	    <br>
+	    <br>
+	    <br> <br>
+	    <div style="margin-top:15rem ; background-color:aliceblue; border-radius:15px;">
+		    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere fuga dolore numquam velit sapiente vero ipsam repellendus nisi eligendi libero ducimus sint blanditiis, aperiam expedita, reprehenderit corporis asperiores architecto mollitia?</p>
+	    </div>
+	    <br>
+	    <br>
+	    <br> <br>
+	    <br>
+	   
+	    <br>
+	    <br> <br>
+	    <br>
+	    <div></div>
+	    <br>
+	    <br> <br>
+	    <br>
+	    <br>
+	    <br>
+    </section>
+    </center>
+     
+    </body>
+    
+    
+	 
+</html>
