--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,8 +1,61 @@
-<br>
-<h1><u>About Me</u></h1>
-<h1>My name is Nevin Sunny. I'm a Computer Programming student. 
+   <!-- ======= About Section ======= -->
+    <section id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="box-shadow-full">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="row">
+                    <div class="col-sm-6 col-md-5">
+                      <div class="about-img" margin-bottom="2rem">
+                        <img src="img/Nevin_Image.jpg" class="img-fluid rounded b-shadow-a" alt="" margin-left="10px" ;>
+                      </div>
+                    </div>
+                    <div class="col-sm-9 col-md-7">
+                      <div class="about-info">
+                        <p><span class="title-s">Name: </span> <span>Nevin Sunny</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Computer Programmer</span></p>
+                        <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
+                        <p><span class="title-s">Phone: </span> <span>249 898 9414</span></p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="skill-mf">
+                    <p class="title-s">Skill</p>
+                    <span>HTML</span> <span class="pull-right">95%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div><br>
+                    <span>CSS</span> <span class="pull-right">85%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div><br>
+                    <span>PHP</span> <span class="pull-right">50%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div><br>
+                    <span>JAVASCRIPT</span> <span class="pull-right">70%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div><br>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="about-me pt-4 pt-md-0">
+                    <div class="title-box-2">
+                      <h2 class="title-left">
+                        About me
+                      </h2>
+                    </div>
+                    <p><h3>My name is Nevin Sunny. I'm a Computer Programming student. 
     <br>I was born in India. I moved to Canada 1 year ago. 
-    <br>Other than my studies I am a photographer and have more interest in indoor games. I have travelled a lot of places and took thousands of photos.</h1>
-
-<br><br>
-<h2>To know more about me, contact me at {{email}}</h2>
+    <br>Other than my studies I am a photographer and have more interest in indoor games. I have travelled a lot of places and took thousands of photos.</h3></p> 
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- End About Section -->
