--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -28,11 +28,14 @@
       </ul>
 
     </nav>
-    <footer></footer>
+   
 
     {{{body}}}
     {{!-- Bootstrap JavaScript--}}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
   </body>
+   <footer><center><div style="margin-top:15rem ; background-color:aliceblue; border-radius:15px;">
+		 | Website created Nevin Sunny  || <a href="https://github.com/Nevin511"></a> Get This Page</a>
+     </div></center></footer>
 </html>
