--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -80,50 +80,59 @@
 <br>
 
 <div class="flex-row">
+
+<a href="">
   <div class="card">
 	  
 	  <div class="card__content">
         <div class="card__title">Movie Details Website</div>
+	<div class="card__title">Retro Telephones Website</div>
+	<div class="imgss">
 	<br>
 	<br>
+	<br><br><br>
 	<br>
-	<br><br>
-	<br>
-	<br><br>
+	<br><br></div>
         <p class="card__text">A Movie Details Website Used to Showcase Movie Details like Review,Poster With links to Review in imdb Built With Html,CSS, JS, Jquery
 
 	</p>
        
       </div>
-  </div>
+  </div></a>
+  <a href="">
   <div class="card">
 	  
 	  <div class="card__content">
         <div class="card__title">Retro Telephones Website</div>
 	<br>
+	<center><div class="imgss1">
 	<br>
 	<br>
-	<br><br>
+	<br><br><br>
 	<br>
-	<br><br>
+	<br><br></div></center>
+	
+	
         <p class="card__text">A WebSite Used To Book Telephones  Built With Html,CSS, JS, Jquery
        
-      </div></div>
+      </div></div></a>
+      <a href="https://github.com/Nevin511/WebApplication2">
       <div class="card">
 	  
 	  <div class="card__content">
         <div class="card__title">Photogratphy Portfolio Page</div>
 	<br>
+	<div class="imgss2">
 	<br>
 	<br>
-	<br><br>
+	<br><br><br>
 	<br>
-	<br><br>
+	<br><br></div>
 	
         <p class="card__text">A Website To Showcase the Portfolio Of My Photograph Built With Html,CSS, JS, Jquery</p>
        
       </div></div>
- 
+ </a>
  
 </div>
 <br>
