--- a/views/about.hbs
+++ b/views/about.hbs
@@ -9,7 +9,16 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img" margin-bottom="2rem">
-                        <img src="img/Nevin_Image.jpg" class="img-fluid rounded b-shadow-a" alt="" margin-left="10px" ;>
+                       <div class="sunny">
+                         <br>
+                         <br>
+                         <br>
+                         <br>
+                         <br>
+                         <br><br>
+                         <br>
+                         <br>
+                       </div>
                       </div>
                     </div>
                     <div class="col-sm-9 col-md-7">
