--- a/views/about.hbs
+++ b/views/about.hbs
@@ -25,7 +25,7 @@
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Nevin Sunny</span></p>
                         <p><span class="title-s">Profile: </span> <span>Computer Programmer</span></p>
-                        <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
+                        <p><span class="title-s">Email: </span> <span>nevinsunny@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>249 898 9414</span></p>
                       </div>
                     </div>
