--- a/views/contactme.hbs
+++ b/views/contactme.hbs
@@ -15,7 +15,7 @@ body {
 input[type=text], select, textarea {
   width: 100%;
   padding: 12px;
-  border: 1px solid #ccc;
+  border: 1px solid black;
   margin-top: 6px;
   margin-bottom: 16px;
   resize: vertical;
@@ -23,7 +23,7 @@ input[type=text], select, textarea {
 
 input[type=submit] {
   background-color: #04AA6D;
-  color: white;
+  color: black;
   padding: 12px 20px;
   border: none;
   cursor: pointer;
@@ -36,14 +36,14 @@ input[type=submit]:hover {
 /* Style the container/contact section */
 .container {
   border-radius: 5px;
-  background-color: #f2f2f2;
+  background-color: #FFE4C4;
   padding: 10px;
 }
 
 /* Create two columns that float next to eachother */
 .column {
   float: left;
-  width: 50%;
+  width: 35%;
   margin-top: 6px;
   padding: 20px;
 }
@@ -65,18 +65,16 @@ input[type=submit]:hover {
 </style>
 </head>
 <body>
-
-<h2>Responsive Contact Section</h2>
-<p>Resize the browser window to see the effect.</p>
+<br>
+<h3>Contact Section</h3>
 
 <div class="container">
   <div style="text-align:center">
     <h2>Contact Us</h2>
-    <p>Swing by for a cup of coffee, or leave us a message:</p>
+    <p>Anything we can help you with, leave us a message:</p>
   </div>
   <div class="row">
     <div class="column">
-      <img src="./Nevin_Image.jpeg" style="width:100%">
     </div>
     <div class="column">
       <form action="/action_page.php">
