--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -36,6 +36,7 @@
 
   </body>
    <footer><center><div style="margin-top:15rem ; background-color:aliceblue; border-radius:15px;">
-		 | Website created Nevin Sunny  || <a href="https://github.com/Nevin511"><a href="https://github.com/Nevin511"> Get This Page</a>
+		 | Website created by Nevin Sunny  || <a href="https://github.com/Nevin511"><a href="https://github.com/Nevin511"> Get This Page</a>
+     <br>| LinkedIn  || <a href="https://www.linkedin.com/feed/"><a href="https://www.linkedin.com/feed/"> My linkedIn</a>
      </div></center></footer>
 </html>
